--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,6 +1,6 @@
 .odd {
   background-color: pink;
-  font-family: Verdana, DejaVu Sand, sans-serif;
+  font-family: Verdana, "DejaVu Sand", sans-serif;
 }
 
 .cooler {
@@ -14,6 +14,5 @@
 
 #number-4 {
   background-color: lightgreen;
-  font-size: 24px;
   font-weight: bold;
 }
